# blammytv

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  README.md  RELEASING.md  ROADMAP.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: build-mpv-addon.yml  ci.yml  deploy-pages.yml  discord-release.yml
apps/app/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/app/src/: App.tsx  fonts.ts  main.tsx  styles.css  version.ts
apps/app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
apps/app/src-tauri/capabilities/: default.json
apps/app/src-tauri/icons/: icon.icns
apps/app/src-tauri/src/: comp.rs  config_server.rs  frost.glsl  inv.rs  lib.rs  mpv.rs  spike.rs
apps/app/src/app/: App.tsx  AppHeader.tsx  BootScene.tsx  DevBlurBackdrop.tsx  Onboarding.tsx  UpdateChip.tsx  WelcomeAnimation.tsx  onboarding.test.ts  onboarding.ts  onboardingGate.test.ts  onboardingGate.ts  welcome.ts
apps/app/src/components/: AioStreamsSettings.tsx  AppHeader.tsx  CarouselSources.tsx  CategorySidebar.tsx  CompositionPreview.tsx  EmptyState.tsx  EpgGuide.tsx  EpisodeBrowser.tsx  EpisodeCard.tsx  FeaturedHero.tsx  FocusButton.tsx  FocusField.tsx  FocusToggle.tsx  HeroSlider.tsx  LoadingScreen.tsx  LoadingSkeletons.tsx  MediaCard.tsx  MediaRow.tsx  MpvCanvas.tsx  NowPlaying.tsx  OnScreenKeyboard.tsx  Player.tsx  PlaylistsSettings.tsx  ProfileModal.tsx  SettingsPanel.tsx  SetupHandoff.tsx  SourceCard.tsx  SourceError.tsx  SourcePanel.tsx  SourceSelector.tsx  StatsOverlay.tsx  StreamCard.tsx  TheaterOverlay.tsx  TopTabs.tsx  UpdateBanner.tsx  icons.tsx
apps/app/src/data/: aiostreams.ts  data.test.ts  stalker.test.ts  stalker.ts  stremio.ts  xtream.test.ts  xtream.ts
apps/app/src/features/discover/: DiscoverScreen.tsx  data.test.ts  data.ts  searchQuery.ts  searchRequest.ts
apps/app/src/features/live/: CompositionPlayer.tsx  Guide.tsx  Hero.tsx  InvertedPlayer.tsx  LiveScreen.tsx  StatsOverlay.tsx  TheaterOverlay.tsx  adult.test.ts  adult.ts  connections.ts  diskCache.ts  emoji.test.ts  emoji.ts  epg.test.ts  epg.ts  favorites.test.ts  favorites.ts  guide.test.ts  guide.ts  hole.test.ts  hole.ts  m3u.test.ts  m3u.ts  mock.ts  model.ts  overlayApi.ts  quality.test.ts  quality.ts  recents.test.ts  recents.ts  source.load.test.ts  source.m3u.test.ts  source.stalker.test.ts  source.test.ts  source.ts  stream.test.ts  stream.ts  useDirectOverlay.ts  xmltv.test.ts  xmltv.ts
apps/app/src/features/settings/: AioStreamsTab.tsx  (+34 more)
apps/app/src/lib/: admin.ts  config.ts  continueWatching.ts  desktop.ts  emoji.test.ts  emoji.ts  epg.test.ts  epg.ts  epgLazy.ts  errors.test.ts  errors.ts  favorites.ts  focusGuard.ts  fpsmeter.ts  guide.ts  http.ts  keydebug.ts  live.ts  mockConfig.ts  pairing.ts  playlists.ts  profile.ts  quality.ts  recents.ts  scroll.ts  settings.ts  shareCode.test.ts  storage.ts  tauri.ts  time.test.ts  time.ts  tv.ts  updater.ts  version.ts  vod.ts
apps/app/src/screens/: LiveScreen.tsx  OnboardingScreen.tsx  PairingScreen.tsx  PlaceholderScreen.tsx  SearchScreen.tsx  StreamScreen.tsx  TitleDetail.tsx  VodScreen.tsx
apps/app/src/state/: PreferencesProvider.tsx  UpdaterProvider.tsx  preferences.test.ts  preferences.ts  preferences.tsx  updater.ts
apps/app/src/styles/: base.css  boot.css  discover.css  intense-packs.css  live.css  onboarding.css  packs.css  player.css  settings.css  stream.css  themes.css  tokens.css  ui.css  welcome.css
apps/app/src/ui/: ChipTabs.tsx  Placeholder.tsx  QualityBadge.tsx  Toggle.tsx  icons.tsx
apps/desktop/: README.md  overlay.html  package.json
apps/desktop/electron/: main.cjs  overlay-preload.cjs  preload.cjs
apps/desktop/native/mpv/: .gitignore  README.md  binding.gyp  index.cjs  package.json
apps/desktop/scripts/: sync-renderer.mjs
apps/server/: .env.example  README.md  package.json  tsconfig.json
apps/server/src/: env.ts  index.ts  store.ts
apps/server/src/aiostreams/: client.ts  index.ts  mapper.test.ts  mapper.ts  types.ts
apps/server/src/xtream/: client.ts  index.ts  mapper.test.ts  mapper.ts  types.ts
docs/: android-tv.md  canvas-4k-scope.md  composition-integration-plan.md  libmpv-scope.md  motion-audit-handoff.md  polish-audit-0.7.0.json  polish-audit-0.7.0.md  stalker-implementation.md  tauri-migration-scope.md  telly-composition.md
plans/: 001-press-feedback.md  002-overlay-popover-entrances.md  003-vod-source-panel-transitions.md  004-motion-tokens.md  005-thumb-physics.md  006-reduced-motion-pass.md  007-hold-to-clear-progress.md  OP-PLAN.md  README.md  audit-report.md
releases/v0.2.0/: latest.json
releases/v0.2.1/: latest.json
releases/v0.2.5/: latest.json
releases/v0.3.0/: latest.json
releases/v0.3.1/: latest.json
scripts/: fake-aio.mjs  fake-keybox.mjs  fake-m3u.mjs  fake-panel.mjs  fake-stalker.mjs  fetch-libmpv.mjs  gen-bayer-svg.mjs  perf-panel.mjs  release.ps1  verify-adult-filter.mjs  verify-aniskip-chip.mjs  verify-conns.mjs  verify-credits.mjs  verify-discover.mjs  verify-intense-themes.mjs  verify-license.mjs  verify-m3u.mjs  verify-onboarding.mjs  verify-overlay-tracks.mjs  verify-probe.mjs  verify-stalker.mjs  verify-stream.mjs  verify-themes.mjs  verify-watchdog.mjs
services/keybox/: .dockerignore  Dockerfile  README.md  catalog.json  package.json
services/keybox/payloads/: nebula.css
services/keybox/scripts/: admin.mjs  backup.mjs  backup.sh  setup-stripe.mjs
services/keybox/src/: catalog.js  db.js  keygen.js  mailer.js  server.js
services/keybox/test/: admin.test.js  cors.test.js  email.test.js  healthz.test.js  keygen.test.js  payload.test.js  ratelimit.test.js  validate.test.js  webhook.test.js
services/site/: Dockerfile  README.md  index.html  nginx.conf
services/site/plans/: 001-motion-foundations.md  002-interactive-feel.md  003-scroll-reveal-entrances.md  004-hero-load-entrance.md  005-faq-expand-animation.md  README.md
website/: build-landing.mjs  landing-template.html
(+28 files in other folders)
