[package]
name = "app"
version = "0.2.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
# Remember window size/position/maximized across launches. First run (no saved
# state) falls back to the config's maximized:true; afterwards it restores.
tauri-plugin-window-state = "2"
# Self-update from GitHub Releases (auto-check on launch + manual button).
# Driven from Rust commands (below) so no JS plugin packages are needed.
tauri-plugin-updater = "2"
# Rust-side HTTP (reqwest) so the app can reach AIOStreams/Xtream without browser
# CORS. The TLS backend is pinned per-target below — native-tls (Schannel) on
# Windows, rustls elsewhere.

# Windows: native-tls = Schannel, so the TLS fingerprint looks like a normal
# Windows client (some Cloudflare-fronted hosts 403 rustls's distinct
# fingerprint even when the headers are browser-like). Plus the native player
# stack (libmpv via libloading + composition-hosted WebView2 + DirectComposition).
[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
libloading = "0.8"
webview2-com = "0.38"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_UI_Shell",
] }

# Non-Windows (Android, …): rustls is pure Rust — no OpenSSL/Schannel — so it
# cross-compiles cleanly. The native player isn't built here yet.
[target.'cfg(not(windows))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
