[package]
name = "app"
version = "0.2.4"
description = "Self-contained desktop IPTV/VOD client (Xtream Codes + AIOStreams/debrid)."
authors = ["adam-edword"]
license = ""
repository = "https://github.com/adam-edword/blammytv"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
# Remember window size/position/maximized across launches. First run (no saved
# state) falls back to the config's maximized:true; afterwards it restores.
tauri-plugin-window-state = "2"
# Self-update from GitHub Releases (auto-check on launch + manual button).
# Driven from Rust commands (below) so no JS plugin packages are needed.
tauri-plugin-updater = "2"
# Rust-side HTTP so the app can reach AIOStreams/Xtream without browser CORS.
# native-tls = Windows Schannel (same TLS stack as curl/Edge), so the TLS
# fingerprint looks like a normal Windows client — some Cloudflare-fronted hosts
# 403 rustls's distinct fingerprint even when the headers are browser-like.
# Schannel ships with Windows, so the bundle stays self-contained.
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
libloading = "0.8"

# The Telly-way composition spike (Windows): composition-hosted WebView2 +
# DirectComposition over a native mpv child window. These are already in the
# tree via Tauri; pin them as direct deps with the features we need.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_UI_Shell",
] }
