[package]
name = "app"
version = "0.3.0"
description = "Self-contained desktop IPTV/VOD client (Xtream Codes + AIOStreams/debrid)."
authors = ["adam-edword"]
license = ""
repository = "https://github.com/adam-edword/blammytv"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
# Remember window size/position/maximized across launches. First run (no saved
# state) opens maximized (see the setup hook in lib.rs); afterwards it restores.
tauri-plugin-window-state = "2"
# Self-update from GitHub Releases (auto-check on launch + manual button).
# Driven from Rust commands (below) so no JS plugin packages are needed.
tauri-plugin-updater = "2"
# Rust-side HTTP so the app can reach AIOStreams/Xtream without browser CORS.
# native-tls = Windows Schannel (same TLS stack as curl/Edge), so the TLS
# fingerprint looks like a normal Windows client — some Cloudflare-fronted hosts
# 403 rustls's distinct fingerprint even when the headers are browser-like.
# Schannel ships with Windows, so the bundle stays self-contained.
# gzip/brotli/deflate: xmltv.php serves ~20:1-compressible XML — without these
# we downloaded the whole guide raw (the load-time killer). reqwest sends the
# Accept-Encoding and transparently decodes only when these features are on.
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "gzip", "brotli", "deflate"] }
libloading = "0.8"

# Native child-window plumbing for the inverted player (inv.rs): create the
# mpv child HWND and pin it to the bottom of the z-order. Already in the tree
# via Tauri; pinned as a direct dep with just the features inv.rs uses. (The
# WebView2/DirectComposition set died with comp.rs at the v0.2.0 deletion.)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
